# CrisisLink-AI

./: CONTRIBUTING.md  DEMO_SCRIPT.txt  Dockerfile  LICENSE  Makefile  README.md  SUBMISSION_WRITEUP.md  audit_log.jsonl  fast_api_app.py  model.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
crisislink-ui/: .env.example  index.html  package-lock.json  package.json
crisislink-ui/src/: App.jsx  api.js  index.css
crisislink-ui/src/components/: EmergencyConsole.jsx  LiveExecution.jsx  Navbar.jsx  ResultPanel.jsx  Sidebar.jsx  StatusBar.jsx  WorkflowGraph.jsx
crisislink-ui/src/pages/: AIAgents.jsx  Dashboard.jsx  Hospitals.jsx  Incidents.jsx  LiveMap.jsx  Reports.jsx  Resources.jsx  Shelters.jsx
crisislink_ai/: __init__.py  agent.py  config.py  key_rotation.py  mcp_client.py  mcp_server.py
crisislink_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crisislink_ai/.adk/: session.db
crisislink_ai/agents/: __init__.py  communication_agent.py  damage_agent.py  human_approval_agent.py  medical_agent.py  orchestrator.py  priority_agent.py  resource_agent.py  shelter_agent.py  sos_agent.py
crisislink_ai/security/: __init__.py  audit_logger.py  checkpoint.py  human_approval.py  pii_masking.py  prompt_injection_detector.py
crisislink_ai/tools/: __init__.py  emergency_contact_tool.py  hospital_tool.py  maps_tool.py  resource_inventory_tool.py  shelter_tool.py  weather_tool.py
tests/: test_agents.py  test_security.py
