[project]
name = "crisislink-ai"
version = "0.1.0"
description = "AI-Powered Multi-Agent Disaster Coordination System (Google ADK)"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.3.0",
    "mcp>=1.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["crisislink_ai*"]
